# Siphon-TUI

./: README.md  add_path.py  main.py  pyproject.toml  style.tcss
modules/: colors.py  configer.py  download.py
siphon_tui/: __init__.py  __main__.py  cli.py  main.py
siphon_tui/tui/: app.py  style.tcss
siphon_tui/utils/: configer.py  download.py
