[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Siphon-TUI"
version = "4.0.0"
description = "Siphon-TUI is a TUI audio/video downloader based on yt-dlp"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Fkernel653"}
]
keywords = [
    "yt-dlp",
    "downloader",
    "tui",
    "terminal",
    "textual",
    "video",
    "audio",
    "youtube",
    "cli",
    "multimedia",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "yt-dlp",
    "textual",
    "mutagen",
    "color-kiss",
    "arg-kiss",
    "platformdirs",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/Fkernel653/Siphon-TUI"
Repository = "https://github.com/Fkernel653/Siphon-TUI.git"
Documentation = "https://github.com/Fkernel653/Siphon-TUI#readme"

[project.scripts]
siphon-tui = "siphon_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["siphon_tui"]
